--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,12 @@
 # Ignore everything
 *
 
-# But not these files...
+# But not these standard files
 !README.md
 !.gitignore
+
+# Simulation files in C++ for ns-3
 !ns3*
+
+# Helper scripts in Python
+!*.py
